// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests Pagination component matches snapshot 1`] = `
<div
  className="pg align-self-center"
>
  <div
    className="row d-flex justify-content-center"
  >
    <div
      className="align-self-center col-md-9 col-lg-7"
    >
      <p
        className="text-center"
      >
        Showing 
        1
         of 
        10
         pages
      </p>
      <div
        className="pg__filters row justify-content-center"
      >
        <div
          className="pg__per-page col-md-4 col-6 mt-4 mt-md-0 mb-4 mb-md-0 col-md-4"
        >
          <div
            className="row d-flex justify-content-center"
          >
            <div
              className="pg__per-page__select col-lg-4 col-6"
            >
              <select
                className="form-control d-flex justify-content-center pg__per-page"
                onChange={[Function]}
                value={10}
              >
                <option
                  key="25"
                  value={25}
                >
                  25
                </option>
                <option
                  key="50"
                  value={50}
                >
                  50
                </option>
                <option
                  key="100"
                  value={100}
                >
                  100
                </option>
              </select>
            </div>
            <div
              className="pg__per-page__label col-6"
            >
              Per page
            </div>
          </div>
        </div>
        <div
          className="col-md-8 col-12"
        >
          <div
            className="row justify-content-center"
          >
            <div
              className="form-group pg__buttons col"
            >
              <PaginationButton
                buttonText="Prev"
                className="btn btn-default pg__button"
                disableBool={false}
                disabledButton={false}
                name="previous"
                onClick={[Function]}
                value="Prev"
              />
              <PaginationButton
                buttonText="1"
                className="btn btn-default pg__button--active"
                disableBool={false}
                name="previous"
                onClick={[Function]}
                value={1}
              />
              <PaginationButton
                buttonText="2"
                className="btn btn-default pg__button"
                disableBool={false}
                name="previous"
                onClick={[Function]}
                value={2}
              />
              <button
                className="btn btn-default pg__button"
                type="button"
                value=""
              >
                ...
              </button>
              <PaginationButton
                buttonText="9"
                className="btn btn-default pg__button"
                disableBool={false}
                name="next"
                onClick={[Function]}
                value={9}
              />
              <PaginationButton
                buttonText="10"
                className="btn btn-default pg__button"
                disableBool={false}
                name="next"
                onClick={[Function]}
                value={10}
              />
              <PaginationButton
                buttonText="Next"
                className="btn btn-default pg__button"
                disableBool={false}
                disabledButton={true}
                name="next"
                onClick={[Function]}
                value="Next"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests Pagination component renders pagination button to match snapshots 1`] = `
<button
  className="btn btn-default pg__button"
  disabled={false}
  key="prev"
  name="previous"
  onClick={[Function]}
  type="button"
  value="prev"
>
  prev
</button>
`;

exports[`Tests Pagination component renders pagination button with totalpages as 3 1`] = `
<div
  className="pg align-self-center"
>
  <div
    className="row d-flex justify-content-center"
  >
    <div
      className="align-self-center col-md-6 col-lg-5"
    >
      <p
        className="text-center"
      >
        Showing 
        1
         of 
        3
         pages
      </p>
      <div
        className="pg__filters row justify-content-center"
      >
        <div
          className="pg__per-page col-md-4 col-6 mt-4 mt-md-0 mb-4 mb-md-0 col-md-5"
        >
          <div
            className="row d-flex justify-content-center"
          >
            <div
              className="pg__per-page__select col-lg-4 col-6"
            >
              <select
                className="form-control d-flex justify-content-center pg__per-page"
                onChange={[Function]}
                value={1}
              >
                <option
                  key="25"
                  value={25}
                >
                  25
                </option>
                <option
                  key="50"
                  value={50}
                >
                  50
                </option>
                <option
                  key="100"
                  value={100}
                >
                  100
                </option>
              </select>
            </div>
            <div
              className="pg__per-page__label col-6"
            >
              Per page
            </div>
          </div>
        </div>
        <div
          className="col-md-7 col-12"
        >
          <div
            className="col align-self-center text-center"
            id="form-group"
          >
            <PaginationButton
              buttonText="1"
              className="btn btn-default pg__button--active"
              disableBool={false}
              disabledButton={false}
              key="1"
              name="previous"
              onClick={[Function]}
              value={1}
            />
            <PaginationButton
              buttonText="2"
              className="btn btn-default pg__button"
              disableBool={false}
              disabledButton={false}
              key="2"
              name="previous"
              onClick={[Function]}
              value={2}
            />
            <PaginationButton
              buttonText="3"
              className="btn btn-default pg__button"
              disableBool={false}
              disabledButton={false}
              key="3"
              name="previous"
              onClick={[Function]}
              value={3}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
